feat: IndexedDB + Delta Sync + fix supabase-sync 400
- Novo lib-indexeddb.js: camada de persistência local (chats, mensagens, meta)
  * 3 stores: chats (PK=remoteJid), messages (index por remoteJid+timestamp), meta (key-value)
  * API: saveChats/getChats, saveMessages/getMessages, diffChats, pruneOldMessages
  * Singleton DB com pre-open automático

- Delta Sync no lib-chat-loader.js:
  * Passo 1: renderiza instantaneamente do IndexedDB (0ms first paint)
  * Passo 2: fetch 100 chats mais recentes da API em background
  * Passo 3: diffChats() identifica apenas os que mudaram
  * Passo 4: enrichChats() SOMENTE nos alterados (poupando ~90 chats)
  * Passo 5: merge no IDB + re-renderiza
  * Memory cache 60s sobre IDB como hot-layer

- Mensagens com 3 camadas de cache no atendimentos.js:
  * 1. Memory cache (sync, ~0ms)  2. IndexedDB (async, ~5-20ms)  3. API fetch
  * setCachedMessages() persiste automaticamente no IDB (fire-and-forget)

- Fix supabase-sync.js erros 400:
  * action=ping agora retorna 200 (beforeunload handler fix)
  * action vazia retorna 200 em vez de 400
  * default case retorna 200 com hint (em vez de 400)
  * Novo: syncAll/loadAll agora incluem 8 tabelas de atendimento
    (tags, chat_tags, quick_replies, client_notes, snoozed, scheduled, ai_tags, coupon_assignments)
  * safeUpsert/safeSelect helpers: nunca crasham se tabela não existir
  * SUPABASE_SERVICE_KEY ausente retorna 200 com hint (não 500)

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -1165,6 +1165,7 @@ Ex:
     </div>
 
     <script src="lib-auto-sync.js"></script>
+    <script src="lib-indexeddb.js"></script>
     <script src="lib-data-layer.js"></script>
     <script src="lib-chat-loader.js"></script>
     <script src="lib-anne-panel.js"></script>
