--- a/atendimentos.html
+++ b/atendimentos.html
@@ -12,7 +12,8 @@
             return false;
         };
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <!-- TODO: Migrar para Tailwind CLI build em produção -->
     <script>
         tailwind.config = {
             theme: {
