--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>CRM - Sistema de Gestão</title>
     <link rel="icon" type="image/png" href="/V.png">
     <script>fetch('/api/auth/check').then(r=>r.json()).then(d=>{if(!d.authenticated)window.location.href='/login.html?redirect='+encodeURIComponent(window.location.pathname)}).catch(()=>{});</script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <!-- TODO: Migrar para Tailwind CLI build em produção -->
     <script>
         tailwind.config = {
             darkMode: 'class',
