feat: CRM client cache com SWR (stale-while-revalidate)
- lib-crm-cache.js: cache L1 (memoria) + L2 (localStorage) com TTL 30min fresh / 24h stale
- Chave normalizada via normalizePhone() (sem DDI, sem JID)
- Warmup automatico: promove localStorage para memoria ao carregar pagina
- Eviction LRU: maximo 200 clientes cacheados
- hasChanged(): compara metricas-chave para evitar re-render desnecessario

- findAndRenderClientCRM(): agora usa padrao SWR
  - Cache fresh: renderiza instantaneo, sem fetch
  - Cache stale: renderiza instantaneo + revalida em background
  - Cache miss: spinner + fetch normal
- _revalidateInBackground(): busca silenciosa, so atualiza se dados mudaram
- Protecao contra revalidacoes concorrentes (isRevalidating flag)

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -1163,6 +1163,7 @@ Ex:
     <script src="lib-auto-sync.js"></script>
     <script src="lib-indexeddb.js"></script>
     <script src="lib-data-layer.js"></script>
+    <script src="lib-crm-cache.js"></script>
     <script src="lib-chat-loader.js"></script>
     <script src="lib-anne-panel.js"></script>
     <script src="atendimentos.js"></script>
