fix: substituir ultimo wa.me externo por disparo interno Evolution API
atendimentos.html:
- Header do chat: trocar <a> externo por <button> com onclick interno
- Remover target=_blank e href (nao abre mais aba do navegador)

atendimentos.js:
- headerWhatsAppLink agora faz POST /api/whatsapp/send-message
- Envia saudacao via Evolution API com DDI 55
- Toast de sucesso/erro em vez de abrir wa.me
- Feedback visual: botao fica opaco durante envio
- Mensagem aparece automaticamente na Central via Socket.io

Zero links wa.me funcionais restantes no projeto.

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -331,9 +331,9 @@
                         <h2 id="headerName" class="font-semibold text-slate-800 truncate">Nome</h2>
                         <div class="flex items-center gap-2">
                             <p id="headerNumber" class="text-xs text-slate-500 truncate">+55 00 0000-0000</p>
-                            <a id="headerWhatsAppLink" href="#" target="_blank" class="text-emerald-600 hover:text-emerald-700 transition hidden" title="Abrir no WhatsApp" onclick="event.stopPropagation()">
+                            <button id="headerWhatsAppLink" type="button" class="text-emerald-600 hover:text-emerald-700 transition hidden" title="Enviar mensagem via WhatsApp">
                                 <i data-lucide="message-circle" class="w-3.5 h-3.5"></i>
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
