--- a/atendimentos.html
+++ b/atendimentos.html
@@ -174,6 +174,18 @@
             background-color: #d1fae5;
             transition: background-color 2s ease-out;
         }
+        /* Chat não lido — destaque visual forte */
+        .border-l-3 { border-left-width: 3px; }
+        .chat-unread-highlight {
+            background-color: rgba(16, 185, 129, 0.06);
+            border-left: 3px solid #10b981;
+        }
+        /* Badge de não-lidas pulsando quando > 5 */
+        @keyframes unreadPulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.15); }
+        }
+        .unread-badge-pulse { animation: unreadPulse 2s ease-in-out infinite; }
         /* Animação de mensagem nova entrando */
         @keyframes msgSlideIn {
             from { opacity: 0; transform: translateY(10px); }
