feat: M1-M4 identidade unificada + performance + disparos + proxy
M1 - Sistema de Identidade Unificada:
  - core/phone-normalizer.js: canonical() remove 9o digito p/ ID estavel
  - supabase-migration-identity.sql: phone_normalized + RPCs merge/detect
  - server.js + evolution-webhook.js delegam ao PhoneNormalizer

M2 - Performance & Carregamento Incremental:
  - lib-chat-loader.js: infinite scroll (25/page), metricas perf
  - IDB first-paint + delta sync otimizado

M3 - Sistema de Disparos Multi-Bloco Unificado:
  - lib-sequence-builder.js: MessageSequenceBuilder reutilizavel
  - Suporta 8 tipos de bloco, variaveis, estimativa de tempo
  - Integrado em campanhas.html + atendimentos.html

M4 - Desacoplamento do WhatsApp Web:
  - CRM_MediaViewer: lightbox inline (ESC fecha, download direto)
  - Interceptor window.open bloqueando chamadas residuais
  - 3 window.open substituidos em atendimentos.js

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -1390,7 +1390,9 @@ Ex:
     <script src="lib-indexeddb.js"></script>
     <script src="lib-data-layer.js"></script>
     <script src="lib-crm-cache.js"></script>
+    <script src="core/phone-normalizer.js"></script>
     <script src="lib-chat-loader.js"></script>
+    <script src="lib-sequence-builder.js"></script>
     <script src="lib-anne-panel.js"></script>
     <script src="atendimentos.js"></script>
     <script>
