feat: Hash-based routing + navigation buttons

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <i data-lucide="users" class="w-5 h-5"></i>
                     <span>Clientes</span>
                 </a>
-                <a href="atendimentos.html" id="nav-campaigns" class="nav-item">
+                <a href="campanhas.html" class="nav-item">
                     <i data-lucide="megaphone" class="w-5 h-5"></i>
                     <span>Campanhas</span>
                 </a>
