--- a/atendimentos.html
+++ b/atendimentos.html
@@ -249,6 +249,11 @@
                 </button>
             </div>
             <div class="w-px h-6 bg-slate-200"></div>
+            <a href="index.html" class="flex items-center gap-2 px-4 py-2 rounded-xl text-slate-600 hover:text-primary-600 hover:bg-slate-50 transition-colors">
+                <i data-lucide="arrow-left" class="w-4 h-4"></i>
+                <span class="text-sm font-medium">Dashboard</span>
+            </a>
+            <div class="w-px h-6 bg-slate-200"></div>
             <div class="flex items-center gap-3">
                 <div class="w-9 h-9 rounded-xl bg-emerald-100 flex items-center justify-center">
                     <i data-lucide="message-circle" class="w-5 h-5 text-emerald-600"></i>
